--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -40,7 +40,7 @@ select:focus {
     color:var(--white);
     font-weight: 500;
     font-size: 1.4rem;
-    padding: 10px;
+    padding: 1.2rem;
 }
 .submit:hover{
     background-color:rgba(7, 4, 4, 0.486);
